--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
 <h3> <a href="insurance.html"> Isurance Code </a> </h3>
 <h3> <a href="decimalBinary.html"> Decimal to Binary </a> </h3>
 <h3><a href="animation1\animation.html">Animal animation </a> </h3>
+	<h3><a href="jquery.html">funny videos </a> </h3>
 </body>
 </html>
