--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
 <h3> <a href="decimalBinary.html"> Decimal to Binary </a> </h3>
 <h3><a href="animation1\animation.html">Animal animation </a> </h3>
 	<h3><a href="jquery.html">funny videos </a> </h3>
+<h3><a href="bulb2.html">animation bulb on/off </a> </h3>
+<h3><a href="jquery2.html">reunion image fade in fade out </a> </h3>
+	<h3><a href="toggle_loops.htm">reunion image toggle loop </a> </h3>
 </body>
 </html>
