--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
 	<h3><a href="jquery.html">funny videos </a> </h3>
 <h3><a href="bulb2.html">animation bulb on/off </a> </h3>
 <h3><a href="jquery2.html">reunion image fade in fade out </a> </h3>
-	<h3><a href="toggle_loops.htm">reunion image toggle loop </a> </h3>
+	<h3><a href="toggle_loops.html">reunion image toggle loop </a> </h3>
 </body>
 </html>
